--- a/festival/static/css/index.css
+++ b/festival/static/css/index.css
@@ -508,78 +508,106 @@ html {
 
 /* line 20, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/base/_defaults.scss */
 body {
-  font: 400 0.875rem "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font: 400 0.875rem "Triplex";
   line-height: 1.6;
   background: #fff;
   color: #555;
 }
 
 /* line 28, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/base/_defaults.scss */
-.clearfix:after, .header:after, .footer-nav:after, .media:after, .split-container:after {
+.clearfix:after, .container:after, .row:after, .row-box:after, .header:after, .footer-nav:after, .media:after, .split-container:after {
   content: "";
   display: table;
   clear: both;
 }
 
-/* line 5, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/base/_typography.scss */
+@font-face {
+  font-family: "Interstate";
+  font-style: normal;
+  font-weight: 400;
+  src: url("../fonts/interstate/interstate-regular.eot?") format("eot"), url("../fonts/interstate/interstate-regular.woff2") format("woff2"), url("../fonts/interstate/interstate-regular.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Interstate";
+  font-style: normal;
+  font-weight: 700;
+  src: url("../fonts/interstate/interstate-bold.eot?") format("eot"), url("../fonts/interstate/interstate-bold.woff2") format("woff2"), url("../fonts/interstate/interstate-bold.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Triplex";
+  font-style: normal;
+  font-weight: 400;
+  src: url("../fonts/triplex/triplexserif-light.eot?") format("eot"), url("../fonts/triplex/triplexserif-light.woff2") format("woff2"), url("../fonts/triplex/triplexserif-light.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Triplex";
+  font-style: normal;
+  font-weight: 700;
+  src: url("../fonts/triplex/triplexserif-bold.eot?") format("eot"), url("../fonts/triplex/triplexserif-bold.woff2") format("woff2"), url("../fonts/triplex/triplexserif-bold.woff") format("woff");
+}
+
+/* line 13, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/base/_typography.scss */
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Interstate";
   line-height: 1.6;
   text-rendering: optimizeLegibility;
   color: #333;
   margin-bottom: 0;
 }
 
-/* line 13, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/base/_typography.scss */
+/* line 21, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/base/_typography.scss */
 h1 {
   font-size: 1.96875rem;
 }
 
-/* line 17, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/base/_typography.scss */
+/* line 25, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/base/_typography.scss */
 h2 {
   font-size: 1.75rem;
 }
 
-/* line 21, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/base/_typography.scss */
+/* line 29, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/base/_typography.scss */
 h3 {
   font-size: 1.53125rem;
 }
 
-/* line 25, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/base/_typography.scss */
+/* line 33, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/base/_typography.scss */
 h4 {
   font-size: 1.3125rem;
 }
 
-/* line 29, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/base/_typography.scss */
+/* line 37, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/base/_typography.scss */
 h5 {
   font-size: 1.09375rem;
 }
 
-/* line 33, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/base/_typography.scss */
+/* line 41, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/base/_typography.scss */
 h6 {
   font-size: 0.875rem;
 }
 
-/* line 37, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/base/_typography.scss */
+/* line 45, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/base/_typography.scss */
 p {
   margin: 0 0 0.8rem;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Triplex";
 }
 
-/* line 42, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/base/_typography.scss */
+/* line 50, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/base/_typography.scss */
 a {
   color: #e74c3c;
   transition: all .3s ease;
   text-decoration: none;
 }
 
-/* line 53, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/base/_typography.scss */
+/* line 61, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/base/_typography.scss */
 a:active, a:focus {
   color: #a82315;
   outline: none;
 }
 
-/* line 59, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/base/_typography.scss */
+/* line 67, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/base/_typography.scss */
 hr {
   border-bottom: 1px solid #e74c3c;
   border-left: none;
@@ -588,14 +616,14 @@ hr {
   margin: 1.6 0;
 }
 
-/* line 67, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/base/_typography.scss */
+/* line 75, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/base/_typography.scss */
 img {
   margin: 0;
   max-width: 100%;
   height: auto;
 }
 
-/* line 73, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/base/_typography.scss */
+/* line 81, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/base/_typography.scss */
 blockquote {
   display: block;
   padding: 0.4375rem 0 0.4375rem 0.58333rem;
@@ -605,57 +633,57 @@ blockquote {
   margin-left: 0;
 }
 
-/* line 82, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/base/_typography.scss */
+/* line 90, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/base/_typography.scss */
 blockquote p {
   margin: 0;
   font-style: italic;
 }
 
-/* line 87, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/base/_typography.scss */
+/* line 95, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/base/_typography.scss */
 blockquote p:last-child,
 p:last-child {
   margin-bottom: 0;
 }
 
-/* line 92, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/base/_typography.scss */
+/* line 100, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/base/_typography.scss */
 cite {
   color: #959595;
   font-style: italic;
 }
 
-/* line 96, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/base/_typography.scss */
+/* line 104, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/base/_typography.scss */
 cite:before {
   content: '\2014 \00A0';
 }
 
-/* line 101, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/base/_typography.scss */
+/* line 109, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/base/_typography.scss */
 del {
   text-decoration: line-through;
 }
 
-/* line 105, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/base/_typography.scss */
+/* line 113, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/base/_typography.scss */
 ins {
   border-bottom: 1px dotted #e74c3c;
 }
 
-/* line 109, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/base/_typography.scss */
+/* line 117, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/base/_typography.scss */
 mark {
   background: #e74c3c;
   padding: 0 .2rem;
 }
 
-/* line 114, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/base/_typography.scss */
+/* line 122, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/base/_typography.scss */
 em {
   font-style: italic;
 }
 
-/* line 118, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/base/_typography.scss */
+/* line 126, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/base/_typography.scss */
 strong {
   font-weight: bold;
 }
 
 /* Prevents sub and sup affecting line-height in all browsers | gist.github.com/413930 */
-/* line 124, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/base/_typography.scss */
+/* line 132, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/base/_typography.scss */
 sub,
 sup {
   position: relative;
@@ -665,29 +693,29 @@ sup {
   vertical-align: baseline;
 }
 
-/* line 133, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/base/_typography.scss */
+/* line 141, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/base/_typography.scss */
 sup {
   top: -0.5em;
 }
 
-/* line 137, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/base/_typography.scss */
+/* line 145, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/base/_typography.scss */
 sub {
   bottom: -0.25em;
 }
 
-/* line 141, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/base/_typography.scss */
+/* line 149, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/base/_typography.scss */
 small,
 .small {
   font-size: 80%;
   line-height: 1.44;
 }
 
-/* line 147, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/base/_typography.scss */
+/* line 155, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/base/_typography.scss */
 .lead {
   font-size: 120%;
 }
 
-/* line 151, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/base/_typography.scss */
+/* line 159, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/base/_typography.scss */
 abbr[title],
 acronym[title] {
   border-bottom: 1px dashed #ccc;
@@ -695,7 +723,7 @@ acronym[title] {
   cursor: help;
 }
 
-/* line 158, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/base/_typography.scss */
+/* line 166, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/base/_typography.scss */
 hr {
   clear: both;
   border: 0;
@@ -703,14 +731,14 @@ hr {
   border-bottom: 1px solid #f0f0f0;
 }
 
-/* line 165, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/base/_typography.scss */
+/* line 173, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/base/_typography.scss */
 pre {
   background: #ecf0f1;
   border-left: 0.3rem solid #e74c3c;
   font-family: Consolas, monaco, monospace;
 }
 
-/* line 171, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/base/_typography.scss */
+/* line 179, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/base/_typography.scss */
 code {
   border-radius: .4rem;
   font-size: 96%;
@@ -719,7 +747,7 @@ code {
   white-space: nowrap;
 }
 
-/* line 179, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/base/_typography.scss */
+/* line 187, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/base/_typography.scss */
 pre > code {
   background: transparent;
   border-radius: 0;
@@ -728,9 +756,32 @@ pre > code {
   white-space: pre;
 }
 
-/* line 187, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/base/_typography.scss */
+/* line 195, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/base/_typography.scss */
 pre > p {
   padding: .3rem;
+}
+
+/* line 5, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/base/_layout.scss */
+.container {
+  margin: 0 auto;
+  width: 100%;
+  padding: 0 1rem;
+}
+
+/* line 22, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/base/_layout.scss */
+.row, .row-box {
+  display: block;
+}
+
+/* line 27, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/base/_layout.scss */
+.main {
+  display: block;
+  margin: 1rem auto;
+}
+
+/* line 36, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/base/_layout.scss */
+.aside {
+  display: block;
 }
 
 /**
@@ -828,7 +879,7 @@ input,
 label,
 select {
   display: block;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Triplex";
   font-size: 0.875rem;
 }
 
@@ -870,7 +921,7 @@ textarea {
   border-radius: 3px;
   box-shadow: 0;
   box-sizing: border-box;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Interstate";
   font-size: 0.875rem;
   padding: 0.4375rem;
   transition: border .4s ease;
@@ -1053,7 +1104,7 @@ button {
   color: #fff;
   cursor: pointer;
   display: inline-block;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Triplex";
   font-size: 0.875rem;
   font-weight: 700;
   line-height: 1;
@@ -1113,7 +1164,7 @@ button:disabled {
   padding-left: 1rem;
   background: #e74c3c;
   color: #fff;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Interstate";
   border-radius: 3px;
   text-transform: uppercase;
 }
@@ -1318,7 +1369,7 @@ th {
 .header a {
   display: block;
   padding: 0.875rem 1rem;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Interstate";
 }
 
 /* line 29, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/components/_headers.scss */
@@ -1448,6 +1499,59 @@ th {
 /* line 66, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/components/_footers.scss */
 .footer-nav-right {
   float: right;
+}
+
+/* line 5, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/components/_menu-toggle.scss */
+.menu__toggle {
+  display: block;
+  background: #fff;
+  width: 32px;
+  height: 32px;
+  border-radius: 3px;
+  box-sizing: border-box;
+  padding: 9px 6px;
+  cursor: pointer;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+
+/* line 17, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/components/_menu-toggle.scss */
+.menu__toggle:checked span:first-child,
+.menu__toggle.toggled span:first-child {
+  -webkit-transform: translateY(6px) rotate(45deg);
+          transform: translateY(6px) rotate(45deg);
+}
+
+/* line 22, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/components/_menu-toggle.scss */
+.menu__toggle:checked span:nth-child(2),
+.menu__toggle.toggled span:nth-child(2) {
+  opacity: 0;
+}
+
+/* line 27, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/components/_menu-toggle.scss */
+.menu__toggle:checked span:last-child,
+.menu__toggle.toggled span:last-child {
+  -webkit-transform: translateY(-6px) rotate(-45deg);
+          transform: translateY(-6px) rotate(-45deg);
+}
+
+/* line 32, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/components/_menu-toggle.scss */
+.menu__toggle span {
+  display: block;
+  background: white;
+  width: 20px;
+  height: 2px;
+  border-radius: 3px;
+  -webkit-transform-origin: center;
+          transform-origin: center;
+  transition: 0.3s ease;
+}
+
+/* line 42, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/components/_menu-toggle.scss */
+.menu__toggle span:nth-child(2) {
+  margin: 4px 0;
 }
 
 /* line 8, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/components/_breadcrumbs.scss */
@@ -1896,9 +2000,20 @@ th {
   }
 }
 
-@media (min-width: 961px) {/* line 48, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/base/_typography.scss */
+@media (min-width: 961px) {/* line 56, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/base/_typography.scss */
   a:hover {
     color: #a82315;
+  }/* line 5, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/base/_layout.scss */
+  .container {
+    max-width: 960px;
+  }/* line 27, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/base/_layout.scss */
+  .main {
+    float: left;
+    width: 70%;
+  }/* line 36, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/base/_layout.scss */
+  .aside {
+    float: left;
+    width: 30%;
   }/* line 147, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/base/_forms.scss */
   .sticked-form input {
     float: left;
@@ -1910,5 +2025,17 @@ th {
   .sticked-form input[type=submit] {
     width: 30%;
     border-radius: 0 3px 3px 0;
+  }
+}
+
+@media (min-width: 1200px) {/* line 5, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/base/_layout.scss */
+  .container {
+    max-width: 1140px;
+  }
+}
+
+@media (min-width: 1800px) {/* line 5, /Users/philippebarbosa/Sites/ircam-manifeste/app/festival/static/scss/base/_layout.scss */
+  .container {
+    max-width: 1420px;
   }
 }
