--- a/festival/static/scss/base/_typography.scss
+++ b/festival/static/scss/base/_typography.scss
@@ -1,3 +1,11 @@
+// Heading fonts
+@include font-face($interstate, "../fonts/interstate/interstate-regular", $regular, normal, eot woff2 woff);
+@include font-face($interstate, "../fonts/interstate/interstate-bold", $bold, normal, eot woff2 woff);
+
+// Slab fonts
+@include font-face($triplex, "../fonts/triplex/triplexserif-light", $regular, normal, eot woff2 woff);
+@include font-face($triplex, "../fonts/triplex/triplexserif-bold", $bold, normal, eot woff2 woff);
+
 // ****************************************************************
 // _BaseTypographicStyles
 // ****************************************************************
