--- a/templates/base.html
+++ b/templates/base.html
@@ -25,18 +25,18 @@
     <div class="header" role="banner">
         <div class="container">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="sr-only">{% trans "Toggle Navigation" %}</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
+
+                <button class="menu__toggle">
+                    <span></span>
+                    <span></span>
+                    <span></span>
                 </button>
+
                 {% if settings.SITE_TITLE %}<a class="navbar-brand" href="/">{{ settings.SITE_TITLE }}</a>{% endif %}
                 {% if settings.SITE_TAGLINE %}<p class="navbar-text visible-lg">{{ settings.SITE_TAGLINE }}</p>{% endif %}
             </div>
 
             <div class="navbar-collapse collapse">
-                {% search_form "all" %}
                 {% page_menu "pages/menus/dropdown.html" %}
             </div>
         </div>
@@ -74,6 +74,9 @@
             </main>
 
             <aside class="aside">
+                <div class="search__form">
+                    {% search_form "all" %}
+                </div>
                 {% nevercache %}
                 {% include "includes/language_selector.html" %}
                 {% include "includes/user_panel.html" %}
