--- a/templates/pages/menus/footer.html
+++ b/templates/pages/menus/footer.html
@@ -15,7 +15,7 @@
 
     {% if page.in_menu %}
         {% if forloop.first and not page.parent.in_menu and not page.is_primary %}
-            <ul class="list-unstyled">
+            <ul class="list-inline">
         {% endif %}
         <li {% if page.is_current_or_ascendant %}class="active"{% endif %}
             id="footer-menu-{{ page.html_id }}">
