--- a/festival/templates/festival/artist_detail.html
+++ b/festival/templates/festival/artist_detail.html
@@ -5,7 +5,7 @@
 {% block main %}
 
 <div class="artist-name">
- <h1>{{ artist.name }}</h1>
+ <h2>{{ artist.name }}</h2>
 </div>
 
 <div class="artist-bio">
@@ -18,11 +18,14 @@
  </p>
 </div>
 
-<div class="artist-events">
- <h2>{% trans 'Events' %}</h2>
-  {% for event in artist.events.all %}
-   {{ event.title }}
-  {% endfor %}
+<div class="artist__event">
+ {# <h3>{% trans 'Events' %}</h3> #}
+   <h3 class="artist__event__title">Entendre {{ artist.name }} :</h3>
+
+    {% for event in artist.events.all %}
+        {{ event.title }}
+    {% endfor %}
+    <a href="#" class="artist__event__cta">Réserver</a>
 </div>
 
 {% endblock %}
