--- a/festival/templates/festival/artist_list.html
+++ b/festival/templates/festival/artist_list.html
@@ -8,12 +8,20 @@
  {% trans "Artists" %}
 {% endblock %}
 
-<div class="artist-list">
- <ul>
- {% for artist in object_list %}
-    <li><a href="{% url 'festival-artist-detail' artist.slug %}"><img width="10%" src="{{ MEDIA_URL }}/{% if artist.photo %}{{ artist.photo }}{% elif artist.photo_featured %}{{ artist.photo_featured }}{% endif %}" />{{ artist.name }}</a></li>
- {% endfor %}
- </ul>
+<div class="artist__list">
+    <div class="artist__sizer"></div>
+     {% for artist in object_list %}
+        <div class="artist__item">
+            <div class="artist__item__inner">
+                <a href="{% url 'festival-artist-detail' artist.slug %}" class="artist__item__inner">
+                    <img src="{{ MEDIA_URL }}/{% if artist.photo %}{{ artist.photo }}{% elif artist.photo_featured %}{{ artist.photo_featured }}{% endif %}" alt="Portrait {{ artist.name }}">
+                    <h3 class="artist__item__name">
+                        {{ artist.name }}
+                    </h3>
+                </a>
+            </div>
+        </div>
+     {% endfor %}
 </div>
 
 {% endblock %}
