--- a/templates/index.html
+++ b/templates/index.html
@@ -25,4 +25,6 @@
     <li><a href="http://mezzanine.jupo.org/docs/deployment.html">Deploying to a production server</a></li>
 </ul>
 {% endblocktrans %}
+<hr>
+{% include "includes/html_styleguide.html" %}
 {% endblock %}
